--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="shortcut icon" href="%PUBLIC_URL%/computer.jpg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- Bootstrap core CSS -->
-    <link href="css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
 
     <!-- Custom fonts for this template -->
     <link
@@ -29,8 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
-    <!-- Custom styles for this template -->
-    <link href="css/one-page-wonder.css" rel="stylesheet" />
+    
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -38,18 +37,14 @@
       crossorigin="anonymous"
     />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Affyware</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="https://js.stripe.com/v3/"></script>
 
     <div id="root"></div>
 
-    <script src="css/vendor/jquery/jquery.min.js"></script>
-    <script src="css/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="css/vendor/jquery/jquery.js"></script>
+    <script src="css/vendor/bootstrap/js/bootstrap.js"></script>
     <script src="pdf.js"></script>
   </body>
 </html>
